semantics/x86/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NEG
    SEMICOLON

Grammar

Rule 0     S' -> stmts
Rule 1     stmts -> stmt
Rule 2     stmts -> stmts stmt
Rule 3     stmt -> DEFINE ID LPAREN args RPAREN LBRACKET stmts RBRACKET
Rule 4     stmt -> BREAK
Rule 5     stmt -> expr
Rule 6     stmt -> CASE expr OF cases ESAC
Rule 7     cases -> CASE_HEADER stmts
Rule 8     cases -> cases CASE_HEADER stmts
Rule 9     stmt -> RETURN expr
Rule 10    expr -> expr UPDATE expr
Rule 11    expr -> OP UPDATE ID
Rule 12    expr -> expr PLUS_EQUAL expr
Rule 13    expr -> expr OR_EQUAL expr
Rule 14    stmt -> DO WHILE expr stmts OD
Rule 15    stmt -> FOR ID UPDATE expr TO expr stmts ENDFOR
Rule 16    stmt -> FOR ID UPDATE expr DOWNTO expr stmts ENDFOR
Rule 17    stmt -> IF expr THEN stmts FI
Rule 18    stmt -> IF expr THEN stmts ELSE stmts FI
Rule 19    stmt -> IF expr stmts FI
Rule 20    stmt -> IF expr stmts ELSE stmts FI
Rule 21    stmt -> IF expr stmts ELSE stmts
Rule 22    stmt -> PSEUDO
Rule 23    expr -> ID LPAREN args RPAREN
Rule 24    expr -> ID LPAREN RPAREN
Rule 25    expr -> ID LBRACKET expr RBRACKET
Rule 26    expr -> expr DOT ID
Rule 27    args -> expr
Rule 28    args -> args COMMA expr
Rule 29    expr -> expr LBRACE expr RBRACE
Rule 30    expr -> expr LBRACE expr COLON expr RBRACE
Rule 31    expr -> expr QUEST expr COLON expr
Rule 32    expr -> NOT expr
Rule 33    expr -> MINUS expr
Rule 34    expr -> BITWISE_NOT expr
Rule 35    expr -> expr BITWISE_AND expr
Rule 36    expr -> expr BITWISE_OR expr
Rule 37    expr -> expr OP expr
Rule 38    expr -> expr PLUS expr
Rule 39    expr -> expr MINUS expr
Rule 40    expr -> expr TIMES expr
Rule 41    expr -> expr DIV expr
Rule 42    expr -> expr MOD expr
Rule 43    expr -> expr AND expr
Rule 44    expr -> expr OR expr
Rule 45    expr -> expr LSHIFT expr
Rule 46    expr -> expr RSHIFT expr
Rule 47    expr -> expr LSHIFT_LOGICAL expr
Rule 48    expr -> expr RSHIFT_LOGICAL expr
Rule 49    expr -> expr GREATER expr
Rule 50    expr -> expr LESS expr
Rule 51    expr -> expr LESS_EQUAL expr
Rule 52    expr -> expr GREATER_EQUAL expr
Rule 53    expr -> expr EQUAL expr
Rule 54    expr -> expr NOT_EQUAL expr
Rule 55    expr -> expr XOR expr
Rule 56    expr -> LPAREN expr RPAREN
Rule 57    expr -> ID
Rule 58    expr -> NUMBER
Rule 59    expr -> PSEUDO

Terminals, with rules where they appear

AND                  : 43
BITWISE_AND          : 35
BITWISE_NOT          : 34
BITWISE_OR           : 36
BREAK                : 4
CASE                 : 6
CASE_HEADER          : 7 8
COLON                : 30 31
COMMA                : 28
COMMENT              : 
DEFINE               : 3
DIV                  : 41
DO                   : 14
DOT                  : 26
DOWNTO               : 16
ELSE                 : 18 20 21
ENDFOR               : 15 16
EQUAL                : 53
ESAC                 : 6
FI                   : 17 18 19 20
FOR                  : 15 16
GREATER              : 49
GREATER_EQUAL        : 52
ID                   : 3 11 15 16 23 24 25 26 57
IF                   : 17 18 19 20 21
LBRACE               : 29 30
LBRACKET             : 3 25
LESS                 : 50
LESS_EQUAL           : 51
LPAREN               : 3 23 24 56
LSHIFT               : 45
LSHIFT_LOGICAL       : 47
MINUS                : 33 39
MOD                  : 42
NEG                  : 
NOT                  : 32
NOT_EQUAL            : 54
NUMBER               : 58
OD                   : 14
OF                   : 6
OP                   : 11 37
OR                   : 44
OR_EQUAL             : 13
PLUS                 : 38
PLUS_EQUAL           : 12
PSEUDO               : 22 59
QUEST                : 31
RBRACE               : 29 30
RBRACKET             : 3 25
RETURN               : 9
RPAREN               : 3 23 24 56
RSHIFT               : 46
RSHIFT_LOGICAL       : 48
SEMICOLON            : 
THEN                 : 17 18
TIMES                : 40
TO                   : 15
UPDATE               : 10 11 15 16
WHILE                : 14
XOR                  : 55
error                : 

Nonterminals, with rules where they appear

args                 : 3 23 28
cases                : 6 8
expr                 : 5 6 9 10 10 12 12 13 13 14 15 15 16 16 17 18 19 20 21 25 26 27 28 29 29 30 30 30 31 31 31 32 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56
stmt                 : 1 2
stmts                : 2 3 7 8 14 15 16 17 18 18 19 20 20 21 21 0

Parsing method: LALR

state 0

    (0) S' -> . stmts
    (1) stmts -> . stmt
    (2) stmts -> . stmts stmt
    (3) stmt -> . DEFINE ID LPAREN args RPAREN LBRACKET stmts RBRACKET
    (4) stmt -> . BREAK
    (5) stmt -> . expr
    (6) stmt -> . CASE expr OF cases ESAC
    (9) stmt -> . RETURN expr
    (14) stmt -> . DO WHILE expr stmts OD
    (15) stmt -> . FOR ID UPDATE expr TO expr stmts ENDFOR
    (16) stmt -> . FOR ID UPDATE expr DOWNTO expr stmts ENDFOR
    (17) stmt -> . IF expr THEN stmts FI
    (18) stmt -> . IF expr THEN stmts ELSE stmts FI
    (19) stmt -> . IF expr stmts FI
    (20) stmt -> . IF expr stmts ELSE stmts FI
    (21) stmt -> . IF expr stmts ELSE stmts
    (22) stmt -> . PSEUDO
    (10) expr -> . expr UPDATE expr
    (11) expr -> . OP UPDATE ID
    (12) expr -> . expr PLUS_EQUAL expr
    (13) expr -> . expr OR_EQUAL expr
    (23) expr -> . ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . ID LBRACKET expr RBRACKET
    (26) expr -> . expr DOT ID
    (29) expr -> . expr LBRACE expr RBRACE
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . BITWISE_NOT expr
    (35) expr -> . expr BITWISE_AND expr
    (36) expr -> . expr BITWISE_OR expr
    (37) expr -> . expr OP expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIV expr
    (42) expr -> . expr MOD expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr LSHIFT expr
    (46) expr -> . expr RSHIFT expr
    (47) expr -> . expr LSHIFT_LOGICAL expr
    (48) expr -> . expr RSHIFT_LOGICAL expr
    (49) expr -> . expr GREATER expr
    (50) expr -> . expr LESS expr
    (51) expr -> . expr LESS_EQUAL expr
    (52) expr -> . expr GREATER_EQUAL expr
    (53) expr -> . expr EQUAL expr
    (54) expr -> . expr NOT_EQUAL expr
    (55) expr -> . expr XOR expr
    (56) expr -> . LPAREN expr RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . PSEUDO

    DEFINE          shift and go to state 3
    BREAK           shift and go to state 6
    CASE            shift and go to state 8
    RETURN          shift and go to state 9
    DO              shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 12
    PSEUDO          shift and go to state 13
    OP              shift and go to state 14
    ID              shift and go to state 4
    NOT             shift and go to state 15
    MINUS           shift and go to state 16
    BITWISE_NOT     shift and go to state 17
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 18

    stmts                          shift and go to state 1
    stmt                           shift and go to state 2
    expr                           shift and go to state 7

state 1

    (0) S' -> stmts .
    (2) stmts -> stmts . stmt
    (3) stmt -> . DEFINE ID LPAREN args RPAREN LBRACKET stmts RBRACKET
    (4) stmt -> . BREAK
    (5) stmt -> . expr
    (6) stmt -> . CASE expr OF cases ESAC
    (9) stmt -> . RETURN expr
    (14) stmt -> . DO WHILE expr stmts OD
    (15) stmt -> . FOR ID UPDATE expr TO expr stmts ENDFOR
    (16) stmt -> . FOR ID UPDATE expr DOWNTO expr stmts ENDFOR
    (17) stmt -> . IF expr THEN stmts FI
    (18) stmt -> . IF expr THEN stmts ELSE stmts FI
    (19) stmt -> . IF expr stmts FI
    (20) stmt -> . IF expr stmts ELSE stmts FI
    (21) stmt -> . IF expr stmts ELSE stmts
    (22) stmt -> . PSEUDO
    (10) expr -> . expr UPDATE expr
    (11) expr -> . OP UPDATE ID
    (12) expr -> . expr PLUS_EQUAL expr
    (13) expr -> . expr OR_EQUAL expr
    (23) expr -> . ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . ID LBRACKET expr RBRACKET
    (26) expr -> . expr DOT ID
    (29) expr -> . expr LBRACE expr RBRACE
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . BITWISE_NOT expr
    (35) expr -> . expr BITWISE_AND expr
    (36) expr -> . expr BITWISE_OR expr
    (37) expr -> . expr OP expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIV expr
    (42) expr -> . expr MOD expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr LSHIFT expr
    (46) expr -> . expr RSHIFT expr
    (47) expr -> . expr LSHIFT_LOGICAL expr
    (48) expr -> . expr RSHIFT_LOGICAL expr
    (49) expr -> . expr GREATER expr
    (50) expr -> . expr LESS expr
    (51) expr -> . expr LESS_EQUAL expr
    (52) expr -> . expr GREATER_EQUAL expr
    (53) expr -> . expr EQUAL expr
    (54) expr -> . expr NOT_EQUAL expr
    (55) expr -> . expr XOR expr
    (56) expr -> . LPAREN expr RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . PSEUDO

    DEFINE          shift and go to state 3
    BREAK           shift and go to state 6
    CASE            shift and go to state 8
    RETURN          shift and go to state 9
    DO              shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 12
    PSEUDO          shift and go to state 13
    OP              shift and go to state 14
    ID              shift and go to state 4
    NOT             shift and go to state 15
    MINUS           shift and go to state 16
    BITWISE_NOT     shift and go to state 17
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 18

    stmt                           shift and go to state 19
    expr                           shift and go to state 7

state 2

    (1) stmts -> stmt .

    DEFINE          reduce using rule 1 (stmts -> stmt .)
    BREAK           reduce using rule 1 (stmts -> stmt .)
    CASE            reduce using rule 1 (stmts -> stmt .)
    RETURN          reduce using rule 1 (stmts -> stmt .)
    DO              reduce using rule 1 (stmts -> stmt .)
    FOR             reduce using rule 1 (stmts -> stmt .)
    IF              reduce using rule 1 (stmts -> stmt .)
    PSEUDO          reduce using rule 1 (stmts -> stmt .)
    OP              reduce using rule 1 (stmts -> stmt .)
    ID              reduce using rule 1 (stmts -> stmt .)
    NOT             reduce using rule 1 (stmts -> stmt .)
    MINUS           reduce using rule 1 (stmts -> stmt .)
    BITWISE_NOT     reduce using rule 1 (stmts -> stmt .)
    LPAREN          reduce using rule 1 (stmts -> stmt .)
    NUMBER          reduce using rule 1 (stmts -> stmt .)
    $end            reduce using rule 1 (stmts -> stmt .)
    FI              reduce using rule 1 (stmts -> stmt .)
    ELSE            reduce using rule 1 (stmts -> stmt .)
    OD              reduce using rule 1 (stmts -> stmt .)
    ESAC            reduce using rule 1 (stmts -> stmt .)
    CASE_HEADER     reduce using rule 1 (stmts -> stmt .)
    RBRACKET        reduce using rule 1 (stmts -> stmt .)
    ENDFOR          reduce using rule 1 (stmts -> stmt .)


state 3

    (3) stmt -> DEFINE . ID LPAREN args RPAREN LBRACKET stmts RBRACKET

    ID              shift and go to state 20


state 4

    (23) expr -> ID . LPAREN args RPAREN
    (24) expr -> ID . LPAREN RPAREN
    (25) expr -> ID . LBRACKET expr RBRACKET
    (57) expr -> ID .

  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 21
    LBRACKET        shift and go to state 22
    UPDATE          reduce using rule 57 (expr -> ID .)
    PLUS_EQUAL      reduce using rule 57 (expr -> ID .)
    OR_EQUAL        reduce using rule 57 (expr -> ID .)
    DOT             reduce using rule 57 (expr -> ID .)
    LBRACE          reduce using rule 57 (expr -> ID .)
    QUEST           reduce using rule 57 (expr -> ID .)
    BITWISE_AND     reduce using rule 57 (expr -> ID .)
    BITWISE_OR      reduce using rule 57 (expr -> ID .)
    OP              reduce using rule 57 (expr -> ID .)
    PLUS            reduce using rule 57 (expr -> ID .)
    MINUS           reduce using rule 57 (expr -> ID .)
    TIMES           reduce using rule 57 (expr -> ID .)
    DIV             reduce using rule 57 (expr -> ID .)
    MOD             reduce using rule 57 (expr -> ID .)
    AND             reduce using rule 57 (expr -> ID .)
    OR              reduce using rule 57 (expr -> ID .)
    LSHIFT          reduce using rule 57 (expr -> ID .)
    RSHIFT          reduce using rule 57 (expr -> ID .)
    LSHIFT_LOGICAL  reduce using rule 57 (expr -> ID .)
    RSHIFT_LOGICAL  reduce using rule 57 (expr -> ID .)
    GREATER         reduce using rule 57 (expr -> ID .)
    LESS            reduce using rule 57 (expr -> ID .)
    LESS_EQUAL      reduce using rule 57 (expr -> ID .)
    GREATER_EQUAL   reduce using rule 57 (expr -> ID .)
    EQUAL           reduce using rule 57 (expr -> ID .)
    NOT_EQUAL       reduce using rule 57 (expr -> ID .)
    XOR             reduce using rule 57 (expr -> ID .)
    DEFINE          reduce using rule 57 (expr -> ID .)
    BREAK           reduce using rule 57 (expr -> ID .)
    CASE            reduce using rule 57 (expr -> ID .)
    RETURN          reduce using rule 57 (expr -> ID .)
    DO              reduce using rule 57 (expr -> ID .)
    FOR             reduce using rule 57 (expr -> ID .)
    IF              reduce using rule 57 (expr -> ID .)
    PSEUDO          reduce using rule 57 (expr -> ID .)
    ID              reduce using rule 57 (expr -> ID .)
    NOT             reduce using rule 57 (expr -> ID .)
    BITWISE_NOT     reduce using rule 57 (expr -> ID .)
    NUMBER          reduce using rule 57 (expr -> ID .)
    $end            reduce using rule 57 (expr -> ID .)
    RPAREN          reduce using rule 57 (expr -> ID .)
    OF              reduce using rule 57 (expr -> ID .)
    FI              reduce using rule 57 (expr -> ID .)
    ELSE            reduce using rule 57 (expr -> ID .)
    OD              reduce using rule 57 (expr -> ID .)
    ESAC            reduce using rule 57 (expr -> ID .)
    CASE_HEADER     reduce using rule 57 (expr -> ID .)
    RBRACKET        reduce using rule 57 (expr -> ID .)
    ENDFOR          reduce using rule 57 (expr -> ID .)
    THEN            reduce using rule 57 (expr -> ID .)
    COMMA           reduce using rule 57 (expr -> ID .)
    RBRACE          reduce using rule 57 (expr -> ID .)
    COLON           reduce using rule 57 (expr -> ID .)
    TO              reduce using rule 57 (expr -> ID .)
    DOWNTO          reduce using rule 57 (expr -> ID .)

  ! LPAREN          [ reduce using rule 57 (expr -> ID .) ]


state 5

    (56) expr -> LPAREN . expr RPAREN
    (10) expr -> . expr UPDATE expr
    (11) expr -> . OP UPDATE ID
    (12) expr -> . expr PLUS_EQUAL expr
    (13) expr -> . expr OR_EQUAL expr
    (23) expr -> . ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . ID LBRACKET expr RBRACKET
    (26) expr -> . expr DOT ID
    (29) expr -> . expr LBRACE expr RBRACE
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . BITWISE_NOT expr
    (35) expr -> . expr BITWISE_AND expr
    (36) expr -> . expr BITWISE_OR expr
    (37) expr -> . expr OP expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIV expr
    (42) expr -> . expr MOD expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr LSHIFT expr
    (46) expr -> . expr RSHIFT expr
    (47) expr -> . expr LSHIFT_LOGICAL expr
    (48) expr -> . expr RSHIFT_LOGICAL expr
    (49) expr -> . expr GREATER expr
    (50) expr -> . expr LESS expr
    (51) expr -> . expr LESS_EQUAL expr
    (52) expr -> . expr GREATER_EQUAL expr
    (53) expr -> . expr EQUAL expr
    (54) expr -> . expr NOT_EQUAL expr
    (55) expr -> . expr XOR expr
    (56) expr -> . LPAREN expr RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . PSEUDO

    OP              shift and go to state 14
    ID              shift and go to state 4
    NOT             shift and go to state 15
    MINUS           shift and go to state 16
    BITWISE_NOT     shift and go to state 17
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 18
    PSEUDO          shift and go to state 24

    expr                           shift and go to state 23

state 6

    (4) stmt -> BREAK .

    DEFINE          reduce using rule 4 (stmt -> BREAK .)
    BREAK           reduce using rule 4 (stmt -> BREAK .)
    CASE            reduce using rule 4 (stmt -> BREAK .)
    RETURN          reduce using rule 4 (stmt -> BREAK .)
    DO              reduce using rule 4 (stmt -> BREAK .)
    FOR             reduce using rule 4 (stmt -> BREAK .)
    IF              reduce using rule 4 (stmt -> BREAK .)
    PSEUDO          reduce using rule 4 (stmt -> BREAK .)
    OP              reduce using rule 4 (stmt -> BREAK .)
    ID              reduce using rule 4 (stmt -> BREAK .)
    NOT             reduce using rule 4 (stmt -> BREAK .)
    MINUS           reduce using rule 4 (stmt -> BREAK .)
    BITWISE_NOT     reduce using rule 4 (stmt -> BREAK .)
    LPAREN          reduce using rule 4 (stmt -> BREAK .)
    NUMBER          reduce using rule 4 (stmt -> BREAK .)
    $end            reduce using rule 4 (stmt -> BREAK .)
    FI              reduce using rule 4 (stmt -> BREAK .)
    ELSE            reduce using rule 4 (stmt -> BREAK .)
    OD              reduce using rule 4 (stmt -> BREAK .)
    ESAC            reduce using rule 4 (stmt -> BREAK .)
    CASE_HEADER     reduce using rule 4 (stmt -> BREAK .)
    RBRACKET        reduce using rule 4 (stmt -> BREAK .)
    ENDFOR          reduce using rule 4 (stmt -> BREAK .)


state 7

    (5) stmt -> expr .
    (10) expr -> expr . UPDATE expr
    (12) expr -> expr . PLUS_EQUAL expr
    (13) expr -> expr . OR_EQUAL expr
    (26) expr -> expr . DOT ID
    (29) expr -> expr . LBRACE expr RBRACE
    (30) expr -> expr . LBRACE expr COLON expr RBRACE
    (31) expr -> expr . QUEST expr COLON expr
    (35) expr -> expr . BITWISE_AND expr
    (36) expr -> expr . BITWISE_OR expr
    (37) expr -> expr . OP expr
    (38) expr -> expr . PLUS expr
    (39) expr -> expr . MINUS expr
    (40) expr -> expr . TIMES expr
    (41) expr -> expr . DIV expr
    (42) expr -> expr . MOD expr
    (43) expr -> expr . AND expr
    (44) expr -> expr . OR expr
    (45) expr -> expr . LSHIFT expr
    (46) expr -> expr . RSHIFT expr
    (47) expr -> expr . LSHIFT_LOGICAL expr
    (48) expr -> expr . RSHIFT_LOGICAL expr
    (49) expr -> expr . GREATER expr
    (50) expr -> expr . LESS expr
    (51) expr -> expr . LESS_EQUAL expr
    (52) expr -> expr . GREATER_EQUAL expr
    (53) expr -> expr . EQUAL expr
    (54) expr -> expr . NOT_EQUAL expr
    (55) expr -> expr . XOR expr

  ! shift/reduce conflict for OP resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    DEFINE          reduce using rule 5 (stmt -> expr .)
    BREAK           reduce using rule 5 (stmt -> expr .)
    CASE            reduce using rule 5 (stmt -> expr .)
    RETURN          reduce using rule 5 (stmt -> expr .)
    DO              reduce using rule 5 (stmt -> expr .)
    FOR             reduce using rule 5 (stmt -> expr .)
    IF              reduce using rule 5 (stmt -> expr .)
    PSEUDO          reduce using rule 5 (stmt -> expr .)
    ID              reduce using rule 5 (stmt -> expr .)
    NOT             reduce using rule 5 (stmt -> expr .)
    BITWISE_NOT     reduce using rule 5 (stmt -> expr .)
    LPAREN          reduce using rule 5 (stmt -> expr .)
    NUMBER          reduce using rule 5 (stmt -> expr .)
    $end            reduce using rule 5 (stmt -> expr .)
    FI              reduce using rule 5 (stmt -> expr .)
    ELSE            reduce using rule 5 (stmt -> expr .)
    OD              reduce using rule 5 (stmt -> expr .)
    ESAC            reduce using rule 5 (stmt -> expr .)
    CASE_HEADER     reduce using rule 5 (stmt -> expr .)
    RBRACKET        reduce using rule 5 (stmt -> expr .)
    ENDFOR          reduce using rule 5 (stmt -> expr .)
    UPDATE          shift and go to state 25
    PLUS_EQUAL      shift and go to state 26
    OR_EQUAL        shift and go to state 27
    DOT             shift and go to state 28
    LBRACE          shift and go to state 29
    QUEST           shift and go to state 30
    BITWISE_AND     shift and go to state 31
    BITWISE_OR      shift and go to state 32
    OP              shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIV             shift and go to state 37
    MOD             shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40
    LSHIFT          shift and go to state 41
    RSHIFT          shift and go to state 42
    LSHIFT_LOGICAL  shift and go to state 43
    RSHIFT_LOGICAL  shift and go to state 44
    GREATER         shift and go to state 45
    LESS            shift and go to state 46
    LESS_EQUAL      shift and go to state 47
    GREATER_EQUAL   shift and go to state 48
    EQUAL           shift and go to state 49
    NOT_EQUAL       shift and go to state 50
    XOR             shift and go to state 51

  ! OP              [ reduce using rule 5 (stmt -> expr .) ]
  ! MINUS           [ reduce using rule 5 (stmt -> expr .) ]


state 8

    (6) stmt -> CASE . expr OF cases ESAC
    (10) expr -> . expr UPDATE expr
    (11) expr -> . OP UPDATE ID
    (12) expr -> . expr PLUS_EQUAL expr
    (13) expr -> . expr OR_EQUAL expr
    (23) expr -> . ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . ID LBRACKET expr RBRACKET
    (26) expr -> . expr DOT ID
    (29) expr -> . expr LBRACE expr RBRACE
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . BITWISE_NOT expr
    (35) expr -> . expr BITWISE_AND expr
    (36) expr -> . expr BITWISE_OR expr
    (37) expr -> . expr OP expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIV expr
    (42) expr -> . expr MOD expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr LSHIFT expr
    (46) expr -> . expr RSHIFT expr
    (47) expr -> . expr LSHIFT_LOGICAL expr
    (48) expr -> . expr RSHIFT_LOGICAL expr
    (49) expr -> . expr GREATER expr
    (50) expr -> . expr LESS expr
    (51) expr -> . expr LESS_EQUAL expr
    (52) expr -> . expr GREATER_EQUAL expr
    (53) expr -> . expr EQUAL expr
    (54) expr -> . expr NOT_EQUAL expr
    (55) expr -> . expr XOR expr
    (56) expr -> . LPAREN expr RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . PSEUDO

    OP              shift and go to state 14
    ID              shift and go to state 4
    NOT             shift and go to state 15
    MINUS           shift and go to state 16
    BITWISE_NOT     shift and go to state 17
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 18
    PSEUDO          shift and go to state 24

    expr                           shift and go to state 52

state 9

    (9) stmt -> RETURN . expr
    (10) expr -> . expr UPDATE expr
    (11) expr -> . OP UPDATE ID
    (12) expr -> . expr PLUS_EQUAL expr
    (13) expr -> . expr OR_EQUAL expr
    (23) expr -> . ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . ID LBRACKET expr RBRACKET
    (26) expr -> . expr DOT ID
    (29) expr -> . expr LBRACE expr RBRACE
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . BITWISE_NOT expr
    (35) expr -> . expr BITWISE_AND expr
    (36) expr -> . expr BITWISE_OR expr
    (37) expr -> . expr OP expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIV expr
    (42) expr -> . expr MOD expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr LSHIFT expr
    (46) expr -> . expr RSHIFT expr
    (47) expr -> . expr LSHIFT_LOGICAL expr
    (48) expr -> . expr RSHIFT_LOGICAL expr
    (49) expr -> . expr GREATER expr
    (50) expr -> . expr LESS expr
    (51) expr -> . expr LESS_EQUAL expr
    (52) expr -> . expr GREATER_EQUAL expr
    (53) expr -> . expr EQUAL expr
    (54) expr -> . expr NOT_EQUAL expr
    (55) expr -> . expr XOR expr
    (56) expr -> . LPAREN expr RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . PSEUDO

    OP              shift and go to state 14
    ID              shift and go to state 4
    NOT             shift and go to state 15
    MINUS           shift and go to state 16
    BITWISE_NOT     shift and go to state 17
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 18
    PSEUDO          shift and go to state 24

    expr                           shift and go to state 53

state 10

    (14) stmt -> DO . WHILE expr stmts OD

    WHILE           shift and go to state 54


state 11

    (15) stmt -> FOR . ID UPDATE expr TO expr stmts ENDFOR
    (16) stmt -> FOR . ID UPDATE expr DOWNTO expr stmts ENDFOR

    ID              shift and go to state 55


state 12

    (17) stmt -> IF . expr THEN stmts FI
    (18) stmt -> IF . expr THEN stmts ELSE stmts FI
    (19) stmt -> IF . expr stmts FI
    (20) stmt -> IF . expr stmts ELSE stmts FI
    (21) stmt -> IF . expr stmts ELSE stmts
    (10) expr -> . expr UPDATE expr
    (11) expr -> . OP UPDATE ID
    (12) expr -> . expr PLUS_EQUAL expr
    (13) expr -> . expr OR_EQUAL expr
    (23) expr -> . ID LPAREN args RPAREN
    (24) expr -> . ID LPAREN RPAREN
    (25) expr -> . ID LBRACKET expr RBRACKET
    (26) expr -> . expr DOT ID
    (29) expr -> . expr LBRACE expr RBRACE
    (30) expr -> . expr LBRACE expr COLON expr RBRACE
    (31) expr -> . expr QUEST expr COLON expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . BITWISE_NOT expr
    (35) expr -> . expr BITWISE_AND expr
    (36) expr -> . expr BITWISE_OR expr
    (37) expr -> . expr OP expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIV expr
    (42) expr -> . expr MOD expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr LSHIFT expr
    (46) expr -> . expr RSHIFT expr
    (47) expr -> . expr LSHIFT_LOGICAL expr
    (48) expr -> . expr RSHIFT_LOGICAL expr
    (49) expr -> . expr GREATER expr
    (50) expr -> . expr LESS expr
    (51) expr -> . expr LESS_EQUAL expr
    (52) expr -> . expr GREATER_EQUAL expr
    (53) expr -> . expr EQUAL expr
    (54) expr -> . expr NOT_EQUAL expr
    (55) expr -> . expr XOR expr
    (56) expr -> . LPAREN expr RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . PSEUDO

    OP              shift and go to state 14
    ID              shift and go to state 4
    NOT             shift and go to state 15
    MINUS           shift and go to state 16
    BITWISE_NOT     shift and go to state 17
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 18
    PSEUDO          shift and go to state 24

    expr                           shift and go to state 56

state 13

    (22) stmt -> PSEUDO .
    (59) expr -> PSEUDO .
